tests/webpack-test/cases/errors/load-module-cycle-multiple/test.filter.js

module.exports = () => "TODO: https://github.com/web-infra-dev/rspack/issues/3738"

